# discord-bot

./: BUILD.bazel  Makefile  README.md  WORKSPACE  config_debug.yaml  deps.bzl  go.mod  go.sum
.bot/: build.yaml
cmd/discord-bot/: BUILD.bazel  main.go
cmd/object-proxy/: BUILD.bazel  main.go
pkg/amesh/: BUILD.bazel  amesh.go
pkg/bot/: BUILD.bazel  bot.go
pkg/command/: BUILD.bazel  amesh.go  manager.go
pkg/config/: BUILD.bazel  config.go
pkg/handler/: BUILD.bazel  bot.go  handler.go
pkg/storage/: BUILD.bazel  proxy.go  storage.go
