load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/f110/discord-bot
gazelle(name = "gazelle")

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    srcs = [
        "//cmd/discord-bot",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    entrypoint = ["/usr/local/bin/discord-bot"],
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.f110.dev",
    repository = "discord-bot/bot",
    tag = "latest",
)
