load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/discord-bot/cmd/discord-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/handler:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)

go_binary(
    name = "discord-bot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
